6.5b fix overflow wiki

--- a/CSS/wikiCSS.css
+++ b/CSS/wikiCSS.css
@@ -16,9 +16,7 @@
     --border-primary-light: 1px solid rgba(255, 255, 255, 0.15);
   }
   
-  #wiki {
-    height: calc(100vh - 100px);
-    width: 100%;
+  #wiki-main {
     overflow-y: scroll;
   }
   #wiki-main-container {
